; ModuleID = '/home/carl/AnghaBench/i3/i3bar/src/extr_child.c_cleanup.c'
source_filename = "/home/carl/AnghaBench/i3/i3bar/src/extr_child.c_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stdin_io = common dso_local global i32* null, align 8
@main_loop = common dso_local global i32 0, align 4
@child_sig = common dso_local global i32* null, align 8
@child = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cleanup() #0 {
  %1 = load i32*, i32** @stdin_io, align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %3, label %9

3:                                                ; preds = %0
  %4 = load i32, i32* @main_loop, align 4
  %5 = load i32*, i32** @stdin_io, align 8
  %6 = call i32 @ev_io_stop(i32 %4, i32* %5)
  %7 = load i32*, i32** @stdin_io, align 8
  %8 = call i32 @FREE(i32* %7)
  br label %9

9:                                                ; preds = %3, %0
  %10 = load i32*, i32** @child_sig, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %18

12:                                               ; preds = %9
  %13 = load i32, i32* @main_loop, align 4
  %14 = load i32*, i32** @child_sig, align 8
  %15 = call i32 @ev_child_stop(i32 %13, i32* %14)
  %16 = load i32*, i32** @child_sig, align 8
  %17 = call i32 @FREE(i32* %16)
  br label %18

18:                                               ; preds = %12, %9
  %19 = call i32 @memset(i32* @child, i32 0, i32 4)
  ret void
}

declare dso_local i32 @ev_io_stop(i32, i32*) #1

declare dso_local i32 @FREE(i32*) #1

declare dso_local i32 @ev_child_stop(i32, i32*) #1

declare dso_local i32 @memset(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
